--- a/partials/layout/default/head.htm
+++ b/partials/layout/default/head.htm
@@ -1,23 +1,2 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<title>
-    {% placeholder metaTitle default %}
-        My website
-    {% endplaceholder %}
-    | {{ this.theme.site_name }}</title>
-
-<meta name="description" content="
-{% placeholder metaDescription default %}
-The default meta description for my website which should be changed immediately
-{% endplaceholder %}
-">
-
-{# Load very common libraries from their CDN as quite likely cached #}
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" rel="stylesheet" crossorigin="anonymous">
-{# End CDN loaded assets #}
-
-<link href="{{ 'assets/dist/css/vendor.css'|theme }}" rel="stylesheet">
-<link href="{{ 'assets/dist/css/app.css'|theme }}" rel="stylesheet">
+{% partial 'meta/default' %}
 {% styles %}
