--- a/partials/layout/default/under-header.htm
+++ b/partials/layout/default/under-header.htm
@@ -1,7 +1,9 @@
-<div class="container under-header">
-    <div class="grid">
-        <div class="col-12">
-            UNDER HEADER
+<div class="container-full" id="under-header">
+    <div class="container" id="under-header-container">
+        <div class="grid outer">
+            <div class="col-12">
+                <h2 class="text-center">Under Header</h2>
+            </div>
         </div>
     </div>
 </div>
