--- a/partials/staticMenuMainNavUpper/default.htm
+++ b/partials/staticMenuMainNavUpper/default.htm
@@ -1,21 +1,1 @@
-{% import _self as menu %}
-{% macro recursiveMenu(item) %}
-    {% import _self as menu %}
-    <li class="{{ item.isActive ? "active" : "" }} {{ item.isChildActive ? "child-active" : "" }} {{ item.viewBag.cssClass }}">
-        <a href="{{ item.url }}">{{ item.title }}</a>
-
-        {% if item.items|length %}
-            <ul class="sub_item">
-                {% for child in item.items %}
-                    {{ menu.recursiveMenu(child) }}
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </li>
-{% endmacro %}
-
-<ul>
-    {% for item in __SELF__.menuItems if not item.viewBag.isHidden %}
-        {{ menu.recursiveMenu(item) }}
-    {% endfor %}
-</ul>
+{% partial 'navigation/list' %}
