--- a/assets/src/sass/component/_gdprCookieManager.scss
+++ b/assets/src/sass/component/_gdprCookieManager.scss
@@ -1,3 +1,8 @@
+$gdpr-banner-close-button-color: red !default;
+$gdpr-banner-accept-button-bg: green !default;
+$gdpr-banner-review-button-bg: red !default;
+$gdpr-banner-button-color: #fff !default;
+
 .gdpr-cookie-manager {
   background-color: #fff;
   display: flex!important;
@@ -68,8 +73,8 @@
   width: 100%;
   box-sizing: border-box;
   padding: 0 10px;
-  background-color: rgba(0,0,0,0.9);
-  color: #e3e3e3;
+  background-color: rgba(255,255,255,0.9);
+  color: #333;
   .gdpr-banner__wrapper {
     position: relative;
     padding-top:30px;
@@ -86,14 +91,19 @@
       justify-content: center;
     }
 
+    button {
+      color: $gdpr-banner-button-color;
+    }
     .gdpr-banner__opt-out {
       order: 2;
       margin: 0 5px;
       button {
-        transition: background-color 0.3s;
-        background-color: rgba($color-red, 0.2);
+        transition: background-color 0.3s ease-in, border-color 0.3s ease-in;
+        background-color: $gdpr-banner-review-button-bg;
+        border-color: rgba($gdpr-banner-review-button-bg, 0.8);
         &:hover, &:focus {
-          background-color: rgba($color-red, 0.9) ;
+          background-color: rgba($gdpr-banner-review-button-bg, 0.8);
+          border-color: rgba($gdpr-banner-review-button-bg, 0.3);
         }
       }
     }
@@ -101,10 +111,12 @@
     .gdpr-banner__opt-in {
       margin: 0 5px;
       button {
-        transition: background-color 0.3s;
-        background-color: rgba($color-green, 0.4);
+        transition: background-color 0.3s ease-in, border-color 0.3s ease-in;
+        background-color: $gdpr-banner-accept-button-bg;
+        border-color: rgba($gdpr-banner-accept-button-bg, 0.8);
         &:hover, &:focus {
-          background-color: rgba($color-green, 0.7) ;
+          background-color: rgba($gdpr-banner-accept-button-bg, 0.8);
+          border-color: rgba($gdpr-banner-accept-button-bg, 0.3);
         }
       }
     }
@@ -114,11 +126,12 @@
       bottom: 5px;
       a {
         text-decoration: none;
+        color:#999;
         &:before {
           font-family: "Font Awesome 5 Free";
           font-weight: 900;
           font-size: 1.5rem;
-          color: #fff;
+          color: #999;
           content: '\f509';
           text-decoration: none;
         }
@@ -132,9 +145,11 @@
       button {
         transition: color 0.5s;
         background-color: transparent;
+        outline: none;
         border: none;
+        color: #999;
         &:hover, &:focus {
-          color: $color-red;
+          color: lighten($gdpr-banner-close-button-color,20%);
         }
       }
     }
