--- a/partials/layout/default/header.htm
+++ b/partials/layout/default/header.htm
@@ -1,29 +1,19 @@
-<header class="container">
-    <div class="grid">
-        <div class="brand-space col-8 col-xs-6 col-sm-5 col-md-3 align-self-center">
-            <a class="logo" href="/"><img class="logo" src="{{'assets/dist/images/logo.png'|theme}}" alt="Site Logo"></a>
-        </div>
-        <div class="col-4 col-xs-6 col-sm-7 col-md-9 align-self-center">
-            <div class="grid">
+<header class="flow">
+    <div class="container-full" id="header-main">
+        <div class="container" id="header-container">
+            <div class="grid outer">
                 <div class="col-12">
-                    <div class="grid">
-                        <nav class="col-12 desktop-menu hidden-xxs hidden-xs hidden-sm" id="main-upper-nav">
-                            {% component 'staticMenuMainNavUpper' %}
-                        </nav>
-                        <nav class="col-12 hidden-md hidden-lg hidden-xlg" id="hidden-menu-trigger">
-                            <button class="hamburger hamburger--slider" type="button"
-                                    aria-label="Menu" aria-controls="navigation" aria-expanded="false">
-                                    <span class="hamburger-box">
-                                        <span class="hamburger-inner"></span>
-                                    </span>
-                            </button>
-                        </nav>
-                    </div>
+                    <h1 class="text-center">Site Header</h1>
                 </div>
-
-                <nav class="col-12 desktop-menu hidden-xxs hidden-xs hidden-sm" id="main-lower-nav">
-                    {% component 'staticMenuMainNavLower' %}
-                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="container-full" id="header-below">
+        <div class="container">
+            <div class="grid outer">
+                <div class="col-12">
+                    <p class="text-center">Header Below</p>
+                </div>
             </div>
         </div>
     </div>
