--- a/partials/layout/default/header-fixed.htm
+++ b/partials/layout/default/header-fixed.htm
@@ -1,4 +1,4 @@
-<header class="fixed" id="fixed-header">
+<header class="fixed slideout-shift" id="fixed-header">
     <div class="container-full" id="header-fixed">
         <div class="container" id="header-fixed-container">
             <div class="shrink-wrap">
